--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@types/node": "18.14.6",
@@ -25,9 +27,23 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@storybook/addon-essentials": "^7.0.0-beta.62",
+    "@storybook/addon-interactions": "^7.0.0-beta.62",
+    "@storybook/addon-links": "^7.0.0-beta.62",
+    "@storybook/addon-postcss": "^2.0.0",
+    "@storybook/blocks": "^7.0.0-beta.62",
+    "@storybook/nextjs": "^7.0.0-beta.62",
+    "@storybook/react": "^7.0.0-beta.62",
+    "@storybook/testing-library": "^0.0.14-next.1",
     "autoprefixer": "^10.4.13",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-storybook": "^0.6.11",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "postcss": "^8.4.21",
     "scaffdog": "^2.5.0",
-    "tailwindcss": "^3.2.7"
+    "storybook": "^7.0.0-beta.62",
+    "tailwindcss": "^3.2.7",
+    "windy-radix-palette": "^0.5.0"
   }
 }
